feat: get van details using loader

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,6 @@
     text-decoration: underline !important;
     color: #161616 !important
 }
+.home-container {
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)), url("/home-hero.png") no-repeat center center;
+}
